--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,10 +24,15 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  width: 100%;
   min-height: 100vh;
+  font-family: inherit;
+}
+
+html {
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
